--- a/demo/app-url.json
+++ b/demo/app-url.json
@@ -3,5 +3,6 @@
     "urls": [
         "https://apkpure.com/plague-inc/com.miniclip.plagueinc",
         "https://apkpure.com/instagram/com.instagram.android"
-        ]
+        ],
+    "verbose": true
     }
