--- a/config/app-url.json
+++ b/config/app-url.json
@@ -1,5 +1,5 @@
 {
-"dir": "../data/apps",
+"dir": "../data",
 "urls": [
     "https://apkpure.com/plague-inc/com.miniclip.plagueinc",
     "https://apkpure.com/instagram/com.instagram.android"
