--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
 data
 src/__pycache__
-notebooks/.ipynb_checkpoints
-notebooks/dask-worker-space
-.ipynb_checkpoints
+**/*dask-worker-space
+**/*.ipynb_checkpoints
